tests/parser/errors/extractor.rv
var a = variable :: bind
// Reset panic mode
var trash = O
calling(a :: b)

if a :: {}

